@@ -1,4 +1,4 @@
-Tests finished. 54 tests of 54 passed.
-Compiled as RELEASE
-Test suite pass at GMT Sat Apr 23 16:23:15 2011
+Tests finished. 1 test of 1 passed.
+Compiled as DEBUG
+Test suite pass at GMT Mon Jul 11 12:06:24 2011
 
